ffi/include/kawaiifi.h

typedef struct Interface Interface;
typedef struct Bss Bss;
typedef struct Scan Scan;
typedef struct Ie Ie;
typedef struct FieldList FieldList;
typedef struct InterfaceList InterfaceList;
typedef struct BssList BssList;
/**
 * FFI-safe equivalent of kawaiifi::Band.
 */
typedef enum Band {
  BAND_TWO_POINT_FOUR_GHZ,
  BAND_FIVE_GHZ,
  BAND_SIX_GHZ,
  BAND_UNKNOWN,
} Band;
/**
 * FFI-safe equivalent of kawaiifi::ChannelWidth.
 */
typedef enum ChannelWidth {
  CHANNEL_WIDTH_TWENTY_MHZ,
  CHANNEL_WIDTH_FORTY_MHZ,
  CHANNEL_WIDTH_EIGHTY_MHZ,
  CHANNEL_WIDTH_EIGHTY_PLUS_EIGHTY_MHZ,
  CHANNEL_WIDTH_ONE_SIXTY_MHZ,
  CHANNEL_WIDTH_THREE_HUNDRED_TWENTY_MHZ,
  CHANNEL_WIDTH_UNKNOWN,
} ChannelWidth;
/**
 * FFI-safe equivalent of kawaiifi::scan::Backend.
 */
typedef enum Backend {
#if defined(__linux__)
  BACKEND_NL80211,
#endif
#if defined(__linux__)
  BACKEND_NETWORK_MANAGER,
#endif
} Backend;
/**
 * FFI-safe equivalent of kawaiifi::CapabilityInfo.
 */
typedef struct CapabilityInfo {
  bool ess;
  bool ibss;
  bool privacy;
  bool short_preamble;
  bool critical_update_flag;
  bool nontransmitted_bssids_critical_update_flag;
  bool spectrum_management;
  bool qos;
  bool short_slot_time;
  bool apsd;
  bool radio_measurement;
  bool epd;
} CapabilityInfo;
/**
 * Frees a BSS list returned by `kawaiifi_interface_cached_bss_list`. Does nothing if `list` is null.
 */
void kawaiifi_interface_bss_list_free(struct BssList *list);
/**
 * Frees a string returned by any kawaiifi function.
 */
void kawaiifi_string_free(char *s);
/**
 * Frees a byte buffer returned by any kawaiifi function.
 */
void kawaiifi_bytes_free(uint8_t *ptr, uintptr_t count);
/**
 * Frees a field list returned by `kawaiifi_ie_fields`. Does nothing if `list` is null.
 */
void kawaiifi_field_list_free(struct FieldList *list);
/**
 * Writes the field's byte into `out`. Returns false if unavailable or `field` is null.
 */
bool kawaiifi_field_byte(const struct Field *field, uint8_t *out);
/**
 * Returns the field's raw bytes as a borrowed pointer. Valid for the lifetime of the field.
 * Do NOT free this pointer.
 */
const uint8_t *kawaiifi_field_bytes(const struct Field *field, uintptr_t *out_count);
/**
 * Returns a formatted bit range string. The caller must free with `kawaiifi_string_free`.
 */
char *kawaiifi_field_bits(const struct Field *field);
/**
 * Returns the field's units as a C string. The caller must free with `kawaiifi_string_free`.
 */
char *kawaiifi_field_units(const struct Field *field);
/**
 * Returns the number of subfields in the field, or 0 if `field` is null.
 */
uintptr_t kawaiifi_field_subfield_count(const struct Field *field);
/**
 * Returns a borrowed pointer to the subfield at `index`, or null if out of bounds or `field` is null.
 * The pointer is valid for the lifetime of the field. Do NOT free it.
 */
const struct Field *kawaiifi_field_subfield_get(const struct Field *field,
                                                uintptr_t index);
/**
 * Returns the element ID of the information element, or 0 if `ie` is null.
 */
uint8_t kawaiifi_ie_id(const struct Ie *ie);
/**
 * Returns the length in bytes of the information element's data, or 0 if `ie` is null.
 */
uint8_t kawaiifi_ie_len(const struct Ie *ie);
/**
 * Writes the extended element ID into `out`. Returns false if the IE has no extension ID or `ie` is null.
 */
bool kawaiifi_ie_id_ext(const struct Ie *ie,
                        uint8_t *out);
/**
 * Returns the IE's name as a null-terminated C string, or null if `ie` is null.
 * The caller must free the returned string with `kawaiifi_string_free`.
 */
char *kawaiifi_ie_name(const struct Ie *ie);
/**
 * Returns the raw bytes of the IE. The caller must free with `kawaiifi_bytes_free`.
 */
uint8_t *kawaiifi_ie_bytes(const struct Ie *ie, uintptr_t *out_count);
/**
 * Returns the IE's summary as a C string. The caller must free with `kawaiifi_string_free`.
 */
char *kawaiifi_ie_summary(const struct Ie *ie);
/**
 * Returns the IE's fields as an opaque FieldList. The caller must free with `kawaiifi_field_list_free`.
 * Returns null if the IE is null or has no fields.
 */
struct FieldList *kawaiifi_ie_fields(const struct Ie *ie);
/**
 * Returns all available wireless interfaces as an opaque list.
 * The caller must free the returned list with `kawaiifi_interface_list_free`.
 */
struct InterfaceList *kawaiifi_interfaces(void);
/**
 * Returns the number of interfaces in the list, or 0 if `list` is null.
 */
uintptr_t kawaiifi_interface_list_count(const struct InterfaceList *list);
/**
 * Returns a borrowed pointer to the interface at `index`, or null if out of bounds or `list` is null.
 * The pointer is valid for the lifetime of the list. Do NOT free it with `kawaiifi_interface_free`.
 */
const struct Interface *kawaiifi_interface_list_get(const struct InterfaceList *list,
                                                    uintptr_t index);
/**
 * Frees an interface list returned by `kawaiifi_interfaces`. Does nothing if `list` is null.
 */
void kawaiifi_interface_list_free(struct InterfaceList *list);
/**
 * Returns the default wireless interface, or null if none is found.
 * The caller must free the returned interface with `kawaiifi_interface_free`.
 */
struct Interface *kawaiifi_default_interface(void);
/**
 * Frees an interface returned by `kawaiifi_default_interface`. Does nothing if `interface` is null.
 */
void kawaiifi_interface_free(struct Interface *interface);
/**
 * Returns the cached BSS list for the given interface, or null if `interface` is null or an error occurs.
 * The caller must free the returned list with `kawaiifi_interface_bss_list_free`.
 */
struct BssList *kawaiifi_interface_cached_bss_list(const struct Interface *interface);
/**
 * Returns the number of BSSes in the scan, or 0 if `scan` is null.
 */
uintptr_t kawaiifi_scan_bss_count(const struct Scan *scan);
/**
 * Returns a borrowed pointer to the BSS at `index`, or null if out of bounds or `scan` is null.
 * The pointer is valid for the lifetime of the scan. Do NOT free it.
 */
const struct Bss *kawaiifi_scan_bss_get(const struct Scan *scan, uintptr_t index);
/**
 * Returns the start time of the scan as a Unix timestamp in milliseconds, or 0 if `scan` is null.
 */
int64_t kawaiifi_scan_start_time_utc_ms(const struct Scan *scan);
/**
 * Returns the end time of the scan as a Unix timestamp in milliseconds, or 0 if `scan` is null.
 */
int64_t kawaiifi_scan_end_time_utc_ms(const struct Scan *scan);
/**
 * Frees a scan returned by `kawaiifi_interface_scan`. Does nothing if `scan` is null.
 */
void kawaiifi_scan_free(struct Scan *scan);
/**
 * Performs a blocking scan and returns the result, or null on error.
 * The caller must free the returned scan with `kawaiifi_scan_free`.
 */
struct Scan *kawaiifi_interface_scan(const struct Interface *interface, enum Backend backend);
/**
 * Performs a blocking scan and returns the result, or null on error.
 * The caller must free the returned scan with `kawaiifi_scan_free`.
 */
struct Scan *kawaiifi_interface_scan(const struct Interface *interface);