ffi/include/NativeMethods.g.cs


        /// <summary>
        ///  Writes the field's byte into `out`. Returns false if unavailable or `field` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_field_byte", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_field_byte(Field* field, byte* @out);

        /// <summary>
        ///  Returns the field's raw bytes as a borrowed pointer. Valid for the lifetime of the field.
        ///  Do NOT free this pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_field_bytes", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* kawaiifi_field_bytes(Field* field, nuint* out_count);

        /// <summary>
        ///  Returns a formatted bit range string. The caller must free with `kawaiifi_string_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_field_bits", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* kawaiifi_field_bits(Field* field);

        /// <summary>
        ///  Returns the field's units as a C string. The caller must free with `kawaiifi_string_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_field_units", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* kawaiifi_field_units(Field* field);

        /// <summary>
        ///  Returns the number of subfields in the field, or 0 if `field` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_field_subfield_count", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint kawaiifi_field_subfield_count(Field* field);

        /// <summary>
        ///  Returns a borrowed pointer to the subfield at `index`, or null if out of bounds or `field` is null.
        ///  The pointer is valid for the lifetime of the field. Do NOT free it.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_field_subfield_get", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Field* kawaiifi_field_subfield_get(Field* field, nuint index);

        /// <summary>
        ///  Returns the element ID of the information element, or 0 if `ie` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_ie_id", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte kawaiifi_ie_id(Ie* ie);

        /// <summary>
        ///  Returns the length in bytes of the information element's data, or 0 if `ie` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_ie_len", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte kawaiifi_ie_len(Ie* ie);

        /// <summary>
        ///  Writes the extended element ID into `out`. Returns false if the IE has no extension ID or `ie` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_ie_id_ext", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_ie_id_ext(Ie* ie, byte* @out);

        /// <summary>
        ///  Returns the IE's name as a null-terminated C string, or null if `ie` is null.
        ///  The caller must free the returned string with `kawaiifi_string_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_ie_name", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* kawaiifi_ie_name(Ie* ie);

        /// <summary>
        ///  Returns the raw bytes of the IE. The caller must free with `kawaiifi_bytes_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_ie_bytes", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* kawaiifi_ie_bytes(Ie* ie, nuint* out_count);

        /// <summary>
        ///  Returns the IE's summary as a C string. The caller must free with `kawaiifi_string_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_ie_summary", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* kawaiifi_ie_summary(Ie* ie);

        /// <summary>
        ///  Returns the IE's fields as an opaque FieldList. The caller must free with `kawaiifi_field_list_free`.
        ///  Returns null if the IE is null or has no fields.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_ie_fields", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FieldList* kawaiifi_ie_fields(Ie* ie);

        /// <summary>
        ///  Returns all available wireless interfaces as an opaque list.
        ///  The caller must free the returned list with `kawaiifi_interface_list_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interfaces", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern InterfaceList* kawaiifi_interfaces();

        /// <summary>
        ///  Returns the number of interfaces in the list, or 0 if `list` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_list_count", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint kawaiifi_interface_list_count(InterfaceList* list);

        /// <summary>
        ///  Returns a borrowed pointer to the interface at `index`, or null if out of bounds or `list` is null.
        ///  The pointer is valid for the lifetime of the list. Do NOT free it with `kawaiifi_interface_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_list_get", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Interface* kawaiifi_interface_list_get(InterfaceList* list, nuint index);

        /// <summary>
        ///  Frees an interface list returned by `kawaiifi_interfaces`. Does nothing if `list` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_list_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void kawaiifi_interface_list_free(InterfaceList* list);

        /// <summary>
        ///  Returns the default wireless interface, or null if none is found.
        ///  The caller must free the returned interface with `kawaiifi_interface_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_default_interface", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Interface* kawaiifi_default_interface();

        /// <summary>
        ///  Frees an interface returned by `kawaiifi_default_interface`. Does nothing if `interface` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void kawaiifi_interface_free(Interface* @interface);

        /// <summary>
        ///  Returns the cached BSS list for the given interface, or null if `interface` is null or an error occurs.
        ///  The caller must free the returned list with `kawaiifi_interface_bss_list_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_cached_bss_list", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern BssList* kawaiifi_interface_cached_bss_list(Interface* @interface);

        /// <summary>
        ///  Returns the number of BSSes in the scan, or 0 if `scan` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_scan_bss_count", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint kawaiifi_scan_bss_count(Scan* scan);

        /// <summary>
        ///  Returns a borrowed pointer to the BSS at `index`, or null if out of bounds or `scan` is null.
        ///  The pointer is valid for the lifetime of the scan. Do NOT free it.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_scan_bss_get", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Bss* kawaiifi_scan_bss_get(Scan* scan, nuint index);

        /// <summary>
        ///  Returns the start time of the scan as a Unix timestamp in milliseconds, or 0 if `scan` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_scan_start_time_utc_ms", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern long kawaiifi_scan_start_time_utc_ms(Scan* scan);

        /// <summary>
        ///  Returns the end time of the scan as a Unix timestamp in milliseconds, or 0 if `scan` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_scan_end_time_utc_ms", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern long kawaiifi_scan_end_time_utc_ms(Scan* scan);

        /// <summary>
        ///  Frees a scan returned by `kawaiifi_interface_scan`. Does nothing if `scan` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_scan_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void kawaiifi_scan_free(Scan* scan);


    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct BssList
    {
    }

    /// <summary>
    ///  FFI-safe equivalent of kawaiifi::CapabilityInfo.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct CapabilityInfo
    {
        [MarshalAs(UnmanagedType.U1)] public bool ess;
        [MarshalAs(UnmanagedType.U1)] public bool ibss;
        [MarshalAs(UnmanagedType.U1)] public bool privacy;
        [MarshalAs(UnmanagedType.U1)] public bool short_preamble;
        [MarshalAs(UnmanagedType.U1)] public bool critical_update_flag;
        [MarshalAs(UnmanagedType.U1)] public bool nontransmitted_bssids_critical_update_flag;
        [MarshalAs(UnmanagedType.U1)] public bool spectrum_management;
        [MarshalAs(UnmanagedType.U1)] public bool qos;
        [MarshalAs(UnmanagedType.U1)] public bool short_slot_time;
        [MarshalAs(UnmanagedType.U1)] public bool apsd;
        [MarshalAs(UnmanagedType.U1)] public bool radio_measurement;
        [MarshalAs(UnmanagedType.U1)] public bool epd;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct FieldList
    {
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct InterfaceList
    {
    }


    /// <summary>
    ///  FFI-safe equivalent of kawaiifi::Band.
    /// </summary>
    internal enum Band : uint
    {
        TwoPointFourGhz,
        FiveGhz,
        SixGhz,
        Unknown,
    }

    /// <summary>
    ///  FFI-safe equivalent of kawaiifi::ChannelWidth.
    /// </summary>
    internal enum ChannelWidth : uint
    {
        TwentyMhz,
        FortyMhz,
        EightyMhz,
        EightyPlusEightyMhz,
        OneSixtyMhz,
        ThreeHundredTwentyMhz,
        Unknown,
    }


}
